--- a/integrated_emotion_gender_full.ipynb
+++ b/integrated_emotion_gender_full.ipynb
@@ -876,7 +876,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310MLGPU",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -890,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
